src/objects/CH_WorkgroupCLISeverityAssociation__c.object
<CustomObject>
    <fields>
        <fullName>CH_ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ContractLineItem.ServiceContract.RecordTypeId</field>
                <operation>equals</operation>
                <value>CARE Service Contract</value>
            </filterItems>
            <filterItems>
                <field>ContractLineItem.CH_CA_ContractLineItem_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Workgroup CLI Severity Associations</relationshipLabel>
        <relationshipName>Workgroup_CLI_Severity_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Description__c</fullName>
        <formula>CH_ContractLineItem__r.ServiceContract.Name  +  CH_ContractLineItem__r.Asset.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Duplicate__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Duplicate Check</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CH_Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Severity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <label>Workgroup</label>
        <referenceTo>CH_Workgroup__c</referenceTo>
        <relationshipLabel>Workgroup ContractLineItem Severity Associations</relationshipLabel>
        <relationshipName>Workgroup_CLI_Severity_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workgroup CLI Severity Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WCLIS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workgroup CLI Severity Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>